Fixed vertical spacing on user cards

--- a/app/styles/theme/nw-badges.scss
+++ b/app/styles/theme/nw-badges.scss
@@ -29,7 +29,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  height: 200px;
+  height: 140px;
   margin-bottom: 28px;
   &.badge-large {
     height: 147px;
