--- a/app/styles/theme/nw-card.scss
+++ b/app/styles/theme/nw-card.scss
@@ -218,7 +218,7 @@
         transform: rotateY(-180deg);
       }
       .nw-card-content {
-        height: 252px;
+        height: 222px;
         padding-top: 10px;
         padding-right: 10px;
         .nw-card-scrollable {
